--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
                 <div class="row">
                     <button id="login-btn">Open</button>
                 </div>
+                <p class="hint">(Try: srija or trishala)</p>
                 <p id="login-msg" class="error"></p>
             </div>
         </section>
@@ -81,4 +82,5 @@
 
     <script src="script.js"></script>
 </body>
+
 </html>
